--- a/roles/openbsd.www/templates/var/www/htdocs/index.html.j2
+++ b/roles/openbsd.www/templates/var/www/htdocs/index.html.j2
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang=en>
 <head>
-{{ www_head }}</head>
-
-<header>
-{{ www_header }}</header>
+{{ www_head }}
+</head>
 
 <body>
-{{ index_body }}</body>
+<nav>
+{{ www_nav }}
+</nav>
+
+<header>
+{{ www_header }}
+</header>
+
+<section id="content">
+{{ index_body }}
+</section>
 
 <footer>
-{{ www_footer }}</footer>
+{{ www_footer }}
+</footer>
+</body>
 </html>
