--- a/roles/openbsd.httpd/templates/etc/httpd/includes.conf.j2
+++ b/roles/openbsd.httpd/templates/etc/httpd/includes.conf.j2
@@ -1,6 +1,6 @@
 # {{ template_destpath }}
 # {{ ansible_managed }}
 
-{% for include in httpd_includes %}
-include "/etc/httpd/includes/{{ include }}"
+{% for item in httpd_includes %}
+include "/etc/httpd/includes/{{ item }}"
 {% endfor %}
