--- a/openbsd_run/playbook/roles/openbsd.mail/templates/etc/dovecot/local.conf.j2
+++ b/openbsd_run/playbook/roles/openbsd.mail/templates/etc/dovecot/local.conf.j2
@@ -5,17 +5,27 @@
 # Authentication
 #
 
-auth_mechanisms = plain
-disable_plaintext_auth = yes
 hostname = {{ mail_domain }}
 lda_mailbox_autocreate = yes
-mail_location = maildir:/var/vmail/%u
+mail_location = maildir:~/Maildir
 postmaster_address = postmaster@{{ mail_domain }}
-protocols = imap lmtp pop3
 ssl = required
-ssl_cert = </etc/ssl/{{ mail_domain }}.crt
-ssl_key = </etc/ssl/private/{{ mail_domain }}.key
+ssl_cert = </etc/ssl/mail.crt
+ssl_key = </etc/ssl/private/mail.key
 ssl_prefer_server_ciphers = yes
+
+#
+# Databases
+#
+
+userdb {
+  driver = passwd
+  args = blocking=no
+}
+
+#
+# Services
+#
 
 service imap-login {
   inet_listener imaps {
@@ -24,21 +34,9 @@ service imap-login {
   }
 }
 
-service lmtp {
-  unix_listener lmtp {
-    mode = 0660
-    user = vmail
-    group = vmail
-  }
-}
-
 service pop3-login {
   inet_listener pop3s {
     port = 995
     ssl = yes
   }
-}
-
-userdb {
-  driver = sqlite
 }
