Drop rcpt-to since dovecot is matching against /etc/mail/aliases

--- a/openbsd_run/playbook/roles/openbsd.mail/templates/etc/mail/smtpd.conf.j2
+++ b/openbsd_run/playbook/roles/openbsd.mail/templates/etc/mail/smtpd.conf.j2
@@ -19,7 +19,7 @@ listen on egress port 465 tls-require pki "mail" auth filter {"dkimsign"}
 listen on egress port 587 tls-require pki "mail" auth filter {"dkimsign"}
 
 action "local_mail" maildir "~/Mail" alias <aliases>
-action "dovecot" lmtp "/var/dovecot/lmtp" rcpt-to alias <aliases>
+action "dovecot" lmtp "/var/dovecot/lmtp" alias <aliases>
 action "outbound" relay
 
 match from local for local action "local_mail"
