--- a/roles/mail/templates/etc/mail/smtpd.conf.j2
+++ b/roles/mail/templates/etc/mail/smtpd.conf.j2
@@ -8,8 +8,8 @@ table aliases file:/etc/mail/aliases
 
 filter "dkimsign" proc-exec "filter-dkimsign \
 	-d {{ mail_domain }} \
-	-s {{ mail_dkim_selector }} \
-	-k /etc/mail/dkim/{{ mail_dkim_selector }}.private.key" \
+	-k /etc/mail/dkim/{{ mail_dkim_selector }}.private.key \
+	-s {{ mail_dkim_selector }}" \
 	user _dkimsign group _dkimsign
 
 listen on socket
