mail: Rework setup instructions

--- a/roles/mail/templates/etc/dovecot/local.conf.j2
+++ b/roles/mail/templates/etc/dovecot/local.conf.j2
@@ -85,6 +85,10 @@ protocol lmtp {
 #
 
 service imap-login {
+	inet_listener imap {
+		port = 143
+	}
+
 	inet_listener imaps {
 		port = 993
 		ssl = yes
