--- a/roles/mail/templates/etc/mail/smtpd.conf.j2
+++ b/roles/mail/templates/etc/mail/smtpd.conf.j2
@@ -7,9 +7,8 @@ pki "mail" key "/etc/ssl/private/{{ mail_domain }}.key"
 table aliases file:/etc/mail/aliases
 
 filter "dkimsign" proc-exec "filter-dkimsign \
-	-d {{ mail_domain }} \
-	-k /etc/mail/dkim/{{ mail_dkim_selector }}.private.key \
-	-s {{ mail_dkim_selector }}" \
+	-d {{ mail_domain }} -s {{ mail_dkim_selector }} \
+	-k /etc/mail/dkim/{{ mail_dkim_selector }}.private.key" \
 	user _dkimsign group _dkimsign
 
 listen on socket
