mail: Make lmtp socket world readable
OpenSMTPD now forks LMTP deliveries as the target user:

- https://github.com/OpenSMTPD/OpenSMTPD/commit/f682a707ff6e72011db359c7cc72697a82ef4299

I hit this after updating to OpenBSD 7.5 because my mailserver uses
unix user accounts for delivery, where others might use virtual users
under a single unix user account or other methods.

As a temporary workaround, make the LMTP socket world readable until I
have time to find a better solution.

--- a/roles/mail/templates/etc/dovecot/local.conf.j2
+++ b/roles/mail/templates/etc/dovecot/local.conf.j2
@@ -70,7 +70,10 @@ service lmtp {
 	unix_listener lmtp {
 		user = _smtpd
 		group = _smtpd
-		mode = 0600
+		# OpenSMTPD forks lmtp process as user.
+		# https://github.com/OpenSMTPD/OpenSMTPD/commit/f682a707ff6e72011db359c7cc72697a82ef4299
+		# TODO: jcmdln: Use a forward file? Per user?
+		mode = 0666
 	}
 }
 
