--- a/roles/mail/templates/etc/mail/smtpd.conf.j2
+++ b/roles/mail/templates/etc/mail/smtpd.conf.j2
@@ -1,24 +1,18 @@
 # {{ template_destpath }}
 # {{ ansible_managed }}
 
-pki "mail" cert "/etc/ssl/{{ mail_domain }}.crt"
-pki "mail" key "/etc/ssl/private/{{ mail_domain }}.key"
-
 table aliases file:/etc/mail/aliases
 
-filter "dkimsign" proc-exec \
-	"filter-dkimsign \
-		-d {{ mail_domain }} \
-		-k /etc/mail/dkim/{{ mail_dkim_selector }}.private.key \
-		-s {{ mail_dkim_selector }}" \
-	user _dkimsign \
-	group _dkimsign
+pki "{{ mail_domain }}" cert "/etc/ssl/{{ mail_domain }}.crt"
+pki "{{ mail_domain }}" key "/etc/ssl/private/{{ mail_domain }}.key"
 
-listen on socket filter {"dkimsign"}
-listen on lo0 filter {"dkimsign"}
-listen on egress port 25 tls pki "mail" filter {"dkimsign"}
-listen on egress port 465 smtps pki "mail" auth filter {"dkimsign"}
-listen on egress port 587 tls pki "mail" auth filter {"dkimsign"}
+filter "rspamd" proc-exec "filter-rspamd"
+
+listen on socket
+listen on lo0
+listen on egress port 25 tls pki "{{ mail_domain }}" auth-optional filter "rspamd"
+listen on egress port 465 smtps pki "{{ mail_domain }}" auth-optional filter "rspamd"
+listen on egress port 587 tls pki "{{ mail_domain }}" auth-optional filter "rspamd"
 
 action "local_mail" maildir "~/Mail" alias <aliases>
 action "dovecot" lmtp "/var/dovecot/lmtp" alias <aliases>
