--- a/roles/mail/templates/etc/mail/smtpd.conf.j2
+++ b/roles/mail/templates/etc/mail/smtpd.conf.j2
@@ -3,12 +3,12 @@
 
 table aliases file:/etc/mail/aliases
 
-pki "{{ mail_domain }}" cert "/etc/ssl/{{ mail_domain }}.crt"
+pki "{{ mail_domain }}" cert "/etc/ssl/{{ mail_domain }}.fullchain.pem"
 pki "{{ mail_domain }}" key "/etc/ssl/private/{{ mail_domain }}.key"
 
 filter "rspamd" proc-exec "filter-rspamd"
 
-listen on egress port 25 tls pki "{{ mail_domain }}" auth-optional filter "rspamd"
+listen on egress port 25 tls pki "{{ mail_domain }}" filter "rspamd"
 listen on egress port 465 smtps pki "{{ mail_domain }}" auth filter "rspamd"
 listen on egress port 587 tls pki "{{ mail_domain }}" auth filter "rspamd"
 
@@ -17,6 +17,6 @@ action "dovecot" lmtp "/var/dovecot/lmtp" alias <aliases>
 action "outbound" relay
 
 match from local for local action "local_mail"
-match from local auth for any action "outbound"
+match from local for any action "outbound"
 match from any for domain "{{ mail_domain }}" action "dovecot"
 match from any auth for any action "outbound"
